--- a/TankInspector/app.config
+++ b/TankInspector/app.config
@@ -3,8 +3,8 @@
 
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Smellyriver.TankInspector.AppState" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="Smellyriver.TankInspector.RunState" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="Smellyriver.TankInspector.AppState" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="Smellyriver.TankInspector.RunState" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
       <section name="Smellyriver.TankInspector.ApplicationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
       <section name="Smellyriver.TankInspector.Application" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
@@ -27,21 +27,20 @@
     <Smellyriver.TankInspector.ApplicationSettings>
       <setting name="GamePathes" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"/>
         </value>
       </setting>
       <setting name="PreviousDatabaseKeyHash" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="PreviousTankKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="PreviousTankGalleryPageKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="EMailAddress" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="SSAOEnabled" serializeAs="String">
         <value>True</value>
@@ -80,7 +79,7 @@
         <value>True</value>
       </setting>
       <setting name="PasswordHash" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ShowPassword" serializeAs="String">
         <value>False</value>
@@ -153,13 +152,13 @@
     </Smellyriver.TankInspector.Application>
   </userSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <log4net>
     <root>
       <level value="INFO"/>
       <appender-ref ref="FileAppender"/>
-      <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="ConsoleAppender"/>
     </root>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
@@ -167,19 +166,19 @@
       </layout>
     </appender>
     <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="sti.log" />
-      <appendToFile value="true" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="5" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <file value="sti.log"/>
+      <appendToFile value="true"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO" />
-        <levelMax value="FATAL" />
+        <levelMin value="INFO"/>
+        <levelMax value="FATAL"/>
       </filter>
     </appender>
   </log4net>
